# nesmulator

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
docs/: references.md
src/: CMakeLists.txt  cpu.cpp  cpu.h  example_class.cpp  example_class.h  instruction.h  memory.cpp  memory.h
src/utils/: types.h
tests/: CMakeLists.txt  cpu_basic_functions_test.cpp  example_test_1.cpp  example_test_2.cpp  test_memory.cpp
